--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = python-gsmmodem-new
-description = Control an attached GSM modem: send/receive SMS messages, handle calls, etc
+name = python-gsmmodem-zero-date
+description = Control an attached GSM modem: send/receive SMS messages, handle calls, etc. fixed zero dates decode pdu
 license = LGPLv3+
-author = Francois Aucamp
-author_email = francois.aucamp@gmail.com
+author = kcolin
+author_email = k21@kcolin.xyz
 url = https://github.com/babca/python-gsmmodem
 long_description = file: README.rst
 long_description_content_type = text/x-rst
